update index.html menu reference on home

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="content">
         <h3>We believe a cup of coffee is one of the most important, simple pleasures in life</h3><br><br>
 
-        <a href="#" class="btn">get yours now</a>
+        <a href="#menu" class="btn">get yours now</a>
     </div>
 
 </section>
